# learngl

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp  shader.h
src/shaders/: shader.fs  shader.vs
